# Camera_Capturer

./: .gitignore  8_reset.py  8_rotation.py  CMakeLists.txt  README.md  README_ROS2_TIME_SYNC.md  collect_pan.sh  package.xml  package_ROS2.xml
.history/: CMakeLists_20260126161826.txt  CMakeLists_20260126163516.txt
.history/src/: guidestereo_ros_20260126161826.cpp  guidestereo_ros_20260126163831.cpp  guidestereo_ros_20260126163833.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_capturer/share/ament_index/resource_index/package_run_dependencies/: camera_capturer
install/camera_capturer/share/ament_index/resource_index/parent_prefix_path/: camera_capturer
install/camera_capturer/share/camera_capturer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_capturer/share/camera_capturer/cmake/: camera_capturerConfig.cmake
launch/: camera_rgbdt.launch.py  camera_rgbdt_sync.launch.py  camera_stereo.launch.py  camera_stereo_sync.launch.py  realsense.launch.py
log/: latest_build
rviz_cfg/: rgbdt.rviz  stereo.rviz
src/: camera_RGBDT.cpp  camera_RGBDT_no_imu.cpp  camera_RGBDT_ros.cpp  camera_RGBDT_without_imu.cpp  device_path.h  guidemono.cpp  guidestereo.cpp  guidestereo_ros.cpp  realsense.cpp  realsense_imu_test.cpp  utils.h
src/producer/: guide_producer.cpp  guide_producer.h  realsense_producer.cpp  realsense_producer.h
src/ros/: camera_RGBDT_ros.cpp  camera_RGBDT_sync_ros.cpp  guidestereo_ros.cpp  guidestereo_sync_ros.cpp  realsense_ros.cpp
src/sync_bridge/: sync_bridge.cpp  sync_bridge.h
src/utils/: common_utils.h  ros_utils.h
src/writer/: guide_writer.cpp  guide_writer.h  realsense_writer.cpp  realsense_writer.h
